--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
             <li><a href="http://tj.github.io/nib/">CSS3 Extensions with Nib</a></li>
             <li><a href="{{ root_url }}try.html">Try Stylus Online!</a></li>
         </ul>
-        <div id="ribbon"><a href="https://github.com/LearnBoost/stylus">Fork me on GitHub</a></div>
+        <div id="ribbon"><a href="https://github.com/stylus/stylus">Fork me on GitHub</a></div>
         <div id="content">
             {% unless is_index %}<h1>{{ title }}</h1>{% endunless %}
             {{ processed_content }}
