--- a/s/main.styl
+++ b/s/main.styl
@@ -30,8 +30,7 @@ inset()
 html
   dark = #ECECEC
   background dark
-  background -moz-linear-gradient(-90deg, #fff, dark) fixed
-  background -webkit-gradient(linear, left top, left bottom, from(#fff), to(dark)) fixed
+  background linear-gradient(#fff, dark) fixed
 
 body
   padding 120px 150px
